# Camera_LLM_Inference

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt
app/: camera_thread.py  chat_session.py  chat_store.py  main_window.py  styles.py
app/screens/: screen1_home.py  screen2_capture.py  screen3_crop.py  screen4_model_select.py  screen5_chat.py  screen6_save.py  screen7_done.py
camera_llm/: __init__.py  chat_session.py  chat_store.py  cli.py  llm_client.py  main_window.py  styles.py
camera_llm.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
camera_llm/screens/: screen1_home.py  screen2_capture.py  screen3_crop.py  screen4_model_select.py  screen5_chat.py  screen6_save.py  screen7_done.py
chats/: Verified-ImageResponse.json  Verified-VideoResponse_1.json  Verified-VideoResponse_2.json
