[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "camera-llm"
version = "0.1.1"
description = "A local application to feed images/videos from a webcam into local LLMs for analysis and conversations."
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "PySide6>=6.6.0",
    "opencv-python>=4.9.0",
    "openai>=1.30.0",
    "numpy>=1.26.0",
    "pyqtdarktheme==0.1.7"
]

[project.scripts]
camera-llm = "camera_llm.cli:cli"

[tool.setuptools.packages.find]
include = ["camera_llm", "camera_llm.*"]

[tool.setuptools.package-data]
camera_llm = ["*.ico"]
